--- a/TaxiApplication/TaxiApplication/TaxiApplication.csproj
+++ b/TaxiApplication/TaxiApplication/TaxiApplication.csproj
@@ -10,4 +10,12 @@
       <ProjectReference Include="..\TaxiApplication.BL\TaxiApplication.BL.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Swashbuckle" Version="5.6.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
+    </ItemGroup>
+
 </Project>
