--- a/TaxiApplication/TaxiApplication.BL/TaxiApplication.BL.csproj
+++ b/TaxiApplication/TaxiApplication.BL/TaxiApplication.BL.csproj
@@ -13,6 +13,9 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.30.1" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
     </ItemGroup>
 
 </Project>
