--- a/TaxiApplication/TaxiApplication.DAL/TaxiApplication.DAL.csproj
+++ b/TaxiApplication/TaxiApplication.DAL/TaxiApplication.DAL.csproj
@@ -15,6 +15,10 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.5" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
